Links to images/illustration ins folders

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-light  ">
         <div class="container">
             <a class="navbar-brand" href="#" class="">
-                <img src="logo.svg" alt="logo" class="logo">
+                <img src="./Illustrations/logo.svg" alt="logo" class="logo">
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02"
                 aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
@@ -81,15 +81,15 @@
 
                 <div class="d-flex flex-row flex-wrap">
                     <div class="p-2 flex-fill">
-                        <img src="safe-working-env.jpeg" alt=" image" class="rounded-circle  image img-fluid">
+                        <img src="./Images/safe-working-env.jpeg" alt=" image" class="rounded-circle  image img-fluid">
                         <p>Safe Working Environment</p>
                     </div>
                     <div class="p-2 flex-fill">
-                        <img src="good-salary.jpeg" alt=" image" class="rounded-circle  image img-fluid">
+                        <img src="./Images/good-salary.jpeg" alt=" image" class="rounded-circle  image img-fluid">
                         <p>Good Salary Package</p>
                     </div>
                     <div class="p-2 flex-fill">
-                        <img src="innovation.jpeg" alt=" image" class="rounded-circle  image img-fluid">
+                        <img src="./Images/innovation.jpeg" alt=" image" class="rounded-circle  image img-fluid">
                         <p>Innovation At Its Peak</p>
                     </div>
                 </div>
@@ -111,7 +111,7 @@
             <hr class="line">
             <div class="row">
                 <div class="col-md-5">
-                    <img src="work-speaks.jpeg" alt=" image" class="rounded img img-fluid">
+                    <img src="./Images/work-speaks.jpeg" alt=" image" class="rounded img img-fluid">
                 </div>
                 <div class="col-md-7">
                     <h4 class="text-center sub-title text-justify">Winner, International Fashion Awards 2019</h4>
@@ -159,7 +159,7 @@
 
             <div class="card-deck">
                 <div class="card location-card">
-                    <img src="lagos.jpeg" alt=" image" class="rounded card-img img-fluid">
+                    <img src="./Images/slagos.jpeg" alt=" image" class="rounded card-img img-fluid">
                     <h5 class="location">Lagos, Nigeria</h5>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
                         labore et
@@ -167,7 +167,7 @@
                     </p>
                 </div>
                 <div class="card location-card">
-                    <img src="accra.jpeg" alt=" image" class="rounded card-img img-fluid">
+                    <img src="./Images/saccra.jpeg" alt=" image" class="rounded card-img img-fluid">
                     <h5 class="location"> Accra, Ghana</h5>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
                         labore et
@@ -175,7 +175,7 @@
                     </p>
                 </div>
                 <div class="card location-card">
-                    <img src="italy.jpeg" alt=" image" class="rounded card-img img-fluid">
+                    <img src="./Images/sitaly.jpeg" alt=" image" class="rounded card-img img-fluid">
                     <h5 class="location"> Milan, Italy</h5>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
                         labore et
@@ -233,14 +233,14 @@
             <hr class="underline ">
             <div class="d-flex flex-row justify-content-between">
                 <div class="p-2 ">
-                    <img src="logo.svg" alt="logo">
+                    <img src="./Illustrations/logo.svg" alt="logo">
                 </div>
                 <div class=" social-icons p-2">
-                    <img src="facebook.svg" alt="" class="mr-5">
-                    <img src="insta.svg" alt="" class="mr-5">
-                    <img src="linkedin.svg" alt="" class="mr-5">
-                    <img src="pinterest.svg" alt="" class="mr-5">
-                    <img src="twitter.svg" alt="" class="">
+                    <img src="./Illustrations/facebook.svg" alt="" class="mr-5">
+                    <img src="./Illustrations/insta.svg" alt="" class="mr-5">
+                    <img src="./Illustrations/linkedin.svg" alt="" class="mr-5">
+                    <img src="./Illustrations/pinterest.svg" alt="" class="mr-5">
+                    <img src="./Illustrations/twitter.svg" alt="" class="">
                 </div>
             </div>
             <hr class="underline ">
