Link to location images - flexwrap on footer

--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
 
             <div class="card-deck">
                 <div class="card location-card">
-                    <img src="./Images/slagos.jpeg" alt=" image" class="rounded card-img img-fluid">
+                    <img src="./Images/lagos.jpeg" alt=" image" class="rounded card-img img-fluid">
                     <h5 class="location">Lagos, Nigeria</h5>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
                         labore et
@@ -167,7 +167,7 @@
                     </p>
                 </div>
                 <div class="card location-card">
-                    <img src="./Images/saccra.jpeg" alt=" image" class="rounded card-img img-fluid">
+                    <img src="./Images/accra.jpeg" alt=" image" class="rounded card-img img-fluid">
                     <h5 class="location"> Accra, Ghana</h5>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
                         labore et
@@ -175,7 +175,7 @@
                     </p>
                 </div>
                 <div class="card location-card">
-                    <img src="./Images/sitaly.jpeg" alt=" image" class="rounded card-img img-fluid">
+                    <img src="./Images/italy.jpeg" alt=" image" class="rounded card-img img-fluid">
                     <h5 class="location"> Milan, Italy</h5>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
                         labore et
@@ -231,7 +231,7 @@
             </div>
 
             <hr class="underline ">
-            <div class="d-flex flex-row justify-content-between">
+            <div class="d-flex flex-row flex-wrap justify-content-between">
                 <div class="p-2 ">
                     <img src="./Illustrations/logo.svg" alt="logo">
                 </div>
