--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
     <!-- Navigation bar -->
 
-    <nav class="navbar navbar-expand-lg navbar-light bg-light  ">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container">
             <a class="navbar-brand" href="#" class="">
                 <img src="./Illustrations/logo.svg" alt="logo" class="logo">
@@ -27,7 +27,7 @@
             </button>
 
 
-            <div class="collapse navbar-collapse ml-6" id="navbarTogglerDemo02">
+            <div class="collapse navbar-collapse ml-auto" id="navbarTogglerDemo02">
                 <ul class="navbar-nav">
                     <li class="nav-item mr-3">
                         <a class="nav-link" href="#">About Me</a>
