Footer items alignment and margins

--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                         ea commodo consequat. </p>
                     <button class="btn float-right"> Read more</button>
                 </div>
-            </div>
+            </div>footer
         </div>
 
 
@@ -231,11 +231,11 @@
             </div>
 
             <hr class="underline ">
-            <div class="d-flex flex-row flex-wrap justify-content-between">
+            <div class="d-flex flex-row flex-wrap footer2">
                 <div class="p-2 ">
                     <img src="./Illustrations/logo.svg" alt="logo">
                 </div>
-                <div class=" social-icons p-2">
+                <div class=" social-icons p-2 m-3 ">
                     <img src="./Illustrations/facebook.svg" alt="" class="mr-5">
                     <img src="./Illustrations/insta.svg" alt="" class="mr-5">
                     <img src="./Illustrations/linkedin.svg" alt="" class="mr-5">
